# jeton-rpi-communication

./: README.md
candle/: CMakeLists.txt
candle/src/: main.cpp
jetson_communication/: CMakeLists.txt
jetson_communication/include/: communication.h  motor.h  uart_communication.h  udp_communication.h
jetson_communication/src/: main.cpp  motor.cpp  uart_communication.cpp  udp_communication.cpp
rpi_motor_control/: CMakeLists.txt
rpi_motor_control/candle/: CMakeLists.txt
rpi_motor_control/include/: communication.h  motor.h  uart_communication.h  udp_communication.h
rpi_motor_control/src/: main.cpp  motor.cpp  uart_communication.cpp  udp_communication.cpp
